# sfmapi_hloc

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: integration.yml
examples/: run-server.ps1
src/sfmapi_hloc/: __init__.py  api_benchmark.py  api_launcher.py  backend.py  cli.py  plugin.py  runner.py  server.py
tests/: test_api_benchmark.py  test_api_launcher.py  test_backend_actions.py  test_plugin.py  test_runner.py  test_sfmapi_http_discovery.py
