[project]
name = "sfmapi-hloc"
version = "0.2.0"
description = "sfmapi backend-action wrapper for Hierarchical Localization (HLOC)"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.12,<3.13"
dependencies = [
    "sfmapi>=0.0.1,<0.1",
]

[project.optional-dependencies]
server = []
dev = [
    "pytest>=8.3",
    "ruff>=0.8",
]
mcp = [
    "fastmcp==3.2.4",
]

[project.scripts]
sfmapi-hloc-api = "sfmapi_hloc.api_launcher:main"
sfmapi-hloc-info = "sfmapi_hloc.cli:main"

[project.entry-points."sfmapi.backends"]
hloc = "sfmapi_hloc.plugin:plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sfmapi_hloc"]

[tool.uv.sources]
sfmapi = { path = "../sfmapi", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT", "RUF"]
ignore = ["E501"]
